...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemGrid"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/manage_tags_button"
        android:layout_width="113dp"
        android:layout_height="33dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="6dp"
...
