<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/Outer_Space">


    <!-- Name Field -->
    <EditText
        android:id="@+id/nameField"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Name"

        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Description Field -->
    <EditText
        android:id="@+id/descriptionField"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Description"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textSize="16sp"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />


    <!-- Date and Model Fields in a row -->
    <com.example.letsgogolfing.DatePickerEditText
        android:id="@+id/dateField"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Date (yyyy-mm-dd)"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/modelField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionField" />


    <EditText
        android:id="@+id/modelField"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Model"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateField"
        app:layout_constraintTop_toBottomOf="@+id/descriptionField" />


    <!-- Make and Value Fields in a row -->
    <EditText
        android:id="@+id/makeField"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Make"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/valueField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateField" />


    <EditText
        android:id="@+id/valueField"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Value (Optional)"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/makeField"
        app:layout_constraintTop_toBottomOf="@+id/modelField" />


    <!-- Comment Field -->
    <EditText
        android:id="@+id/commentField"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Comment (Optional)"
        android:gravity="top"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeField" />


    <!-- Serial Field -->
    <EditText
        android:id="@+id/serialField"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        android:hint="Serial (Optional)"
        android:inputType="number"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentField" />


    <!-- Tags Field -->


    <!-- Add Photo Button -->
    <Button
        android:id="@+id/addPhotoBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"


        android:text="Add Photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_tags_button"
        app:layout_constraintVertical_bias="1.0" />


    <!-- Confirm Button -->

    <!-- Container for the tags -->
    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_tags_button"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/cancel_button_add_item"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirmBtn"
        app:layout_constraintStart_toEndOf="@+id/addPhotoBtn"
        app:layout_constraintTop_toTopOf="@+id/tagsContainer"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/tagsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serialField"
        app:layout_constraintVertical_bias="0.0">
        <!-- Tags TextViews will be added here programmatically -->
    </LinearLayout>


    <Button
        android:id="@+id/add_tags_button"
        android:layout_width="120dp"
        android:layout_height="46dp"
        android:layout_marginBottom="10dp"
        android:text="Add Tags"
        app:layout_constraintBottom_toTopOf="@+id/cancel_button_add_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tagsContainer"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
