...
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Please input your username to continue"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="253dp"
            android:layout_height="48dp"
            android:layout_below="@id/instructionText"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="sans-serif"
...
            android:textColorHint="@color/Ash_Gray"
            android:gravity="center"
            android:hint="Username" />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/Ash_Gray"
...
