...
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button_selector"
        android:padding="8dp"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addItemButton"
        app:layout_constraintHorizontal_chainStyle="packed" />


    <ImageView
        android:id="@+id/addItemButton"
        android:layout_width="48dp"
...
